router and  contollers

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -46,7 +46,7 @@
                                     <!-- Register buttons -->
                                     <div class="text-center">
 
-                                        <a href="/signup" class="btn">Not having a account?<h3> Signup</h3></a>
+                                        <a href="/users/signup" class="btn">Not having a account?<h3> Signup</h3></a>
 
 
                                     </div>
