--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,34 +1,48 @@
 <%- include('./partials/head') %>
     <%- include('./partials/navbar') %>
+
         <div class="container pt-5">
             <table class="table table-dark table-striped">
                 <thead>
+
+
+
+
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">First name</th>
+                        <th scope="col">Last name</th>
+                        <th scope="col">user type</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
+                    <% let number=1; for(user of users){ %>
+                        <tr>
+                            <td>
+                                <%= number %>
+                            </td>
+                            <td>
+                                <%= user.firstName %>
+                            </td>
+                            <td>
+                                <%=user.lastName %>
+                            </td>
+                            <td>
+                                <%=user.userType %>
+                            </td>
+                            <td>
+
+                                <button class="btn btn-warning" id="update">update</button>
+                                <form method="post" action="/users/<%= user.id %>?_method=delete">
+                                    <button class="btn btn-danger" id="delete">delete</button>
+                                </form>
+                            </td>
+                        </tr>
+                        <% number++; } %>
+
                 </tbody>
+
             </table>
         </div>
 
