--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,7 +37,7 @@
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
                                             <input type="text" id="form3Example2" class="form-control"
-                                                name="secondName" />
+                                                name="lastName" />
                                             <label class="form-label" for="form3Example2">Last name</label>
                                         </div>
                                     </div>
@@ -52,6 +52,11 @@
                                 <!-- Password input -->
                                 <div class="form-outline mb-4">
                                     <input type="password" id="form3Example4" class="form-control" name="password" />
+                                    <label class="form-label" for="form3Example4">Password</label>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <input type="hidden" id="form3Example4" class="form-control" name="userType"
+                                        value="user" />
                                     <label class="form-label" for="form3Example4">Password</label>
                                 </div>
 
