--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,14 +5,12 @@
             <table class="table table-dark table-striped">
                 <thead>
 
-
-
-
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">First name</th>
                         <th scope="col">Last name</th>
                         <th scope="col">user type</th>
+                        <th scope="col">email</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
@@ -32,8 +30,14 @@
                                 <%=user.userType %>
                             </td>
                             <td>
+                                <%=user.email %>
+                            </td>
+                            <td>
+                                <form method="post" action="/users/edit">
+                                    <input type="hidden" name="userid" value="<%= user.id %>">
+                                    <button class="btn btn-warning" id="update">update</button>
+                                </form>
 
-                                <button class="btn btn-warning" id="update">update</button>
                                 <form method="post" action="/users/<%= user.id %>?_method=delete">
                                     <button class="btn btn-danger" id="delete">delete</button>
                                 </form>
