--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,7 +28,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a href="/users/logout" class="nav-link ">logout</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
