--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,6 +1,11 @@
 <%- include('./partials/head') %>
     <%- include('./partials/navbar') %>
-
+        <div class="search">
+            <form action="/users/search" method="post">
+                <input type="text" placeholder="type" name="search">
+                <button type="submit">search</button>
+            </form>
+        </div>
         <div class="container pt-5">
             <table class="table table-dark table-striped">
                 <thead>
