--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -36,7 +36,9 @@
                                     <input type="password" id="form3Example4" class="form-control" name="password" />
                                     <label class="form-label" for="form3Example4">Password</label>
                                 </div>
-
+                                <div class="text-danger">
+                                    <%= message%>
+                                </div>
                                 <!-- Submit button -->
                                 <button type="submit" class="btn btn-primary btn-block mb-4">
                                     Sign in
