--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,15 +29,15 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
-                                            <input type="text" id="form3Example1" class="form-control"
-                                                name="firstName" />
+                                            <input type="text" id="form3Example1" class="form-control" name="firstName"
+                                                required />
                                             <label class="form-label" for="form3Example1">First name</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-4">
                                         <div class="form-outline">
-                                            <input type="text" id="form3Example2" class="form-control"
-                                                name="lastName" />
+                                            <input type="text" id="form3Example2" class="form-control" name="lastName"
+                                                required />
                                             <label class="form-label" for="form3Example2">Last name</label>
                                         </div>
                                     </div>
@@ -45,13 +45,14 @@
 
                                 <!-- Email input -->
                                 <div class="form-outline mb-4">
-                                    <input type="email" id="form3Example3" class="form-control" name="email" />
+                                    <input type="email" id="form3Example3" class="form-control" name="email" required />
                                     <label class="form-label" for="form3Example3">Email address</label>
                                 </div>
 
                                 <!-- Password input -->
                                 <div class="form-outline mb-4">
-                                    <input type="password" id="form3Example4" class="form-control" name="password" />
+                                    <input type="password" id="form3Example4" class="form-control" name="password"
+                                        required />
                                     <label class="form-label" for="form3Example4">Password</label>
                                 </div>
                                 <div class="form-outline mb-4">
